--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "kuroragi/general-helper": "^1.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.7",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
